Add Haenuli to site

--- a/event/vendors.html
+++ b/event/vendors.html
@@ -161,14 +161,25 @@ Occasionally, we also dip into more sophisticated Classic and Gothic Lolita them
   <hr>
   <h2><a href="https://www.ghostgirlgoods.com/">GHOST GiRL GOODS</a></h2>
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-4">
   <img src="../images/guests/ggg.jpg" class="img-fluid" alt="Ghost Girl Goods brand owner Alexia with her crew"/>
 </div>
-  <div class="col-md-6">
+  <div class="col-md-8">
   <p>GHOST GiRL GOODS is a clothing brand that fuses cool hip-hop looks and cute pop style into one. Our goals are to embrace differences and encourage confidence in all hearts! GHOST GiRL uses her love of music, dance, and Japanese street fashion as inspiration while designing each piece. GHOST GiRL GOODS has worked with Sebastian Masuda, creator of 6%DOKIDOKI, on the NEW GENERATION KAWAII Tour held in Toronto, August of 2019 and most recently represented Canada at BuriDeco/World Lolita 2020 in Japan, hosted by Triple*Fortune. The GHOST GiRL GOODS team looks forward to meeting you at Royal Vegas Retreat! BE STRANGE. FEAR THE NORM.</p>
 </div>
 </div>
-<p/>
+  <hr>
+  <h2><a href="https://www.haenuli.com/">Haenuli</a></h2>
+    <div class="row">
+        <div class="col-md-4">
+  <img src="../images/vendors/haenuli.png" class="img-fluid" alt="Haenuli logo"/>
+</div>
+  <div class="col-md-8">
+  <p>Haenuli, better known as Nunu, ran her lolita fashion brand Haenuli Fashion in South Korea for 13 years, fulfilling the final orders just a few months before the spread of covid. The next chapter has been taking the Girl and Skeleton from the graphic novel Their Story: The Story You Don't Know and extending them into the world of tarot. The Wandering Spirit Tarot Deck was launched through Kickstarter and fully funded in four minutes.</p>
+ 
+<p>The campaign's tarot deck, tapestries, reading cloth, enamel pins, lolita fashion dress and other items will be available. Some items will be available again later, but others will not. If you missed the campaign, this is your chance.</p>
+</div>
+</div>
 <hr>
 <h2><a href="https://kaetia.carrd.co/">KaetShop (remote)</a></h2>
     <div class="row">
