Add coord contest form to site

--- a/event/coord-contests.html
+++ b/event/coord-contests.html
@@ -97,10 +97,11 @@
   <hr>
   <h1 class="sec01">
       <center>
-  <!--todo application link goes here-->
-</center>
+        <p>
+  <a href="https://forms.gle/RAQntf5MAWsNB7UN6">Sign up to enter our coord contests by November 14!</a>
+</p></center>
 <h2 class="section-header">Our Coord Contests</h2>
-<p>Are you interested in entering either of our Lolita fashion coord contests? Entries will open in October. Please keep in mind that all entrants must have a GA or VIP ticket to Royal Vegas Retreat 2021. We will also announce prizes for both contests as we get closer to the event. Read on for more details about the Lolita Fashion Coord Contest and the Handmade Lolita Fashion Coord Contest, and stay tuned for updates!</p>
+<p>Are you interested in entering either of our Lolita fashion coord contests? Registration is open from October 12 to November 14. You can sign up using our <a href="https://forms.gle/RAQntf5MAWsNB7UN6">Google form</a>. Please keep in mind that all entrants must have a GA or VIP ticket to Royal Vegas Retreat 2021. We will also announce prizes and judges for both contests as we get closer to the event. Read on for more details about the Lolita Fashion Coord Contest and the Handmade Lolita Fashion Coord Contest, and stay tuned for updates!</p>
 <h3 class="section-header">Lolita Fashion Coord Contest</h3>
 <p>For any coordinate where the outfit is not primarily handmade by the entrant, this is the contest for you! On Friday, November 19, fashion enthusiasts will show off their coords in front of our judges and audience for the chance to win fabulous prizes donated by our vendors and sponsors. Coords must be Lolita fashion or a sibling style such as ouji or EGA, or may choose to fuse elements of other J-fashion styles into a Lolita fashion coordinate. We hope to see your creativity and imagination come to life on the stage!</p>
 <h3 class="section-header">Handmade Lolita Fashion Coord Contest</h3>
