Clarify code of conduct and dress code

--- a/about/coc.html
+++ b/about/coc.html
@@ -105,22 +105,7 @@
 <p>All attendees must be 13 or older to purchase a ticket to Royal Vegas Retreat. Certain VIP events at Royal Vegas Retreat may be limited to attendees 21 and over. Attendees of any age may purchase a VIP ticket with the understanding that they will not be allowed into 21+ events if they are under 21.</p>
 <p>For our 2021 event, all attendees MUST be fully vaccinated against COVID-19, where "fully vaccinated" means it has been at least 2 weeks since an attendee's final dose of vaccine. All attendees MUST show proof of vaccination in order to pick up their badge. Anyone caught falsifying their proof of vaccination will be ejected from the event with no refund. Attendees must wear a mask at all times when not eating or drinking. Attendees with masks down or off will be reminded to put their mask back on. Failure to comply may result in ejection from the event with no refund. Pretty Princess Club will provide KN-95 masks for any attendee who needs one.</p>
 <p>Pretty Princess Club stands in opposition to white supremacy, white nationalism, the alt-right, and fascism. We stand in solidarity with all marginalized fashion fans, especially Black and Indigenous fashion fans and, broadly, all fashion fans of color, and trans, fat and plus-sized, and disabled fashion fans. Fashion is not an escape until it is an escape for everyone, and we will do everything we can in our role as an event provider to improve the Lolita Fashion community.</p>
-<p>No attendee may wear a coordinate or piece from any brand or nationality that uses nazi, fascist, or alt-right aesthetics or symbols, defined broadly. This includes coordinates that involve</p> 
-<ul>
-<li>SS iconography</li> 
-<li>depictions or imitations of fascist leaders or movements</li>
-<li>fascist memes and/or coded/dogwhistle language</li>
-<li>any other image used to spread hate toward marginalized groups</li>
-</ul>
-<p>Attendees wearing such coordinates will be ejected from the event immediately with no refund and banned from future events both in-person and online.</p>
-<p>No attendee may wear offensive, racially stereotypical, or culturally appropriative items or styling, including but not limited to:</p>
-<ul>
-<li>blackface</li>
-<li>conical straw hats</li> 
-<li>imitations of Indigenous headdresses</li>
-<li>any other imitation of a non-white culture created for the amusement of a white audience</li>
-</ul>
-<p>Attendees dressed in this way will be ejected from the event immediately with no refund.</p>
+<p>(This section was edited on October 14, 2021 for clarity) No attendee may wear a coordinate or piece that uses nazi, fascist, or alt-right aesthetics or symbols. In addition, no attendee may wear items intended to mock or appropriate from marginalized people and cultures. Attendees wearing such coordinates will be ejected from the event immediately with no refund and banned from future events both in-person and online.</p>
 <p>Pretty Princess Club will not tolerate harassment of any kind at any PPC event, including but not limited to: </p>
 <ul>
 <li>stalking, intimidation or bullying</li>
