--- a/event/event-faq.html
+++ b/event/event-faq.html
@@ -155,7 +155,7 @@
   <h4>What is the dress code policy for Royal Vegas Retreat 2021?</h4>
   <p>Our dress code for Royal Vegas Retreat 2021 is as follows:</p>
   <p>Attendees must wear J-fashion to participate at the event.  This includes but is not limited to: Lolita/EGL, Ouji, Aristocrat/EGA, Mori-kei, Fairy-kei, Decora, Visual-kei, Otome, Gyaru, J-Punk, J-Goth.  Japanese as well as Western formalwear (e.g. a three-piece suit) are also allowed.</p>
-  <p>Cosplay, steampunk, and European historical re-enactment costumes do not fit the theme of this event, and as such are not allowed.</p>
+  <p>Cosplay, steampunk, and European historical re-enactment costumes do not fit the theme of this event, and as such are not allowed. In addition, coordinates in violation of our <a href="../about/coc.html">Code of Conduct</a> are not allowed.</p>
   <p>If you have any questions about the dress code, please feel free to <a href="../contact.html">contact us</a> with any questions.  Our staff at the event are happy to assist as well, and they will have the final say when considering whether a guest’s attire is appropriate for the event.</p>
   <h4>What if my non-Lolita partner or parent wants to come to Royal Vegas Retreat?</h4>
   <p>All J-fashion complies with our dress code, as well as general formalwear - you don't have to wear Lolita all weekend long, and neither does your companion.</p>
