Add contact link to code of conduct

--- a/about/coc.html
+++ b/about/coc.html
@@ -135,6 +135,7 @@
 </ul> 
 <p>If you require specific accommodations in order to attend an event, please reach out to us directly at <a href="mailto:info@prettyprincess.club">info@prettyprincess.club</a>.</p>
 <p>Pretty Princess Club, its staff, and its partners are not responsible for any loss, damage, theft, or injury. Event attendees, virtual and in-person, are responsible for their individual actions and any repercussions that may result. Civil or medical emergencies are to be handled directly by the proper authorities.</p>
+<p>If you have any questions about our code of conduct and policies, please email us at <a href="mailto:info@prettyprincess.club">info@prettyprincess.club</a></p>
 <h2>Social Media Policies</h2>
 <p>Social media accounts on Facebook, Instagram, Twitter, or any other platform, that are explicitly for the purposes of fetish play or promoting kink culture, especially DDLG and ABDL, may not follow any Pretty Princess Club social media account. This is for the safety of our followers and to ensure that our accounts don't become desirable targets for fetish mining. Any fetish account that follows us will be blocked. If you happen to notice a fetish account in our followers, please let us know via DM or email us directly at <a href="mailto:info@prettyprincess.club">info@prettyprincess.club</a>.</p>
 <p>We ask that, when commenting on our posts on any platform, you engage in good faith at all times. Any comment interpreted as harrassment or trolling may be removed with no explanation, and the account providing the comment may be blocked.</p>
