Add what to expect section on fashion show page

--- a/event/fashion-show.html
+++ b/event/fashion-show.html
@@ -135,7 +135,10 @@
     <li>After the October 19 deadline, our team will close applications and work with brands to select models. We need all the models we can get to put on an amazing show, so please apply!</li>
   </ol>
 </p>
-<p>If you have any questions, feel free to drop us a line: <a href="mailto:info@prettyprincess.club">info@prettyprincess.club</a></p>
+<h3 class="section-header">What to Expect</h3>
+<p>Modeling is an amazing experience that puts you in contact with designers, brand owners, and other fashion fans. It requires a bit of a time commitment, but don't forget that our main stage panels will be <a href="https://www.twitch.tv/jfashionondemand">streamed live on Twitch</a> and the VODs for both the main stage panels and community panels will be posted to the <a href="https://www.youtube.com/channel/UCDhEhvYEapENUxRGBN7LJMQ">JFashion on Demand YouTube channel</a> after the event. Model call time is 3 hours before the show on both days. We may ask you to attend a brief rehearsal in the morning before our content starts. We have staff and volunteers on hand to organize and assist you, but please be prepared to do your own hair and makeup. We may ask you to model for more than one brand in a show. Designers and brands may also ask you to bring wardrobe staples like shoes, wigs, and petticoats to assist them in creating the perfect look.</p>
+<p>Seeing Lolita and J-fashion looks on a runway in person is such an important part of our event, and that's why we need your help - thank you in advance for signing up to model!</p>
+  <p>If you have any questions, feel free to drop us a line: <a href="mailto:info@prettyprincess.club">info@prettyprincess.club</a></p>
 </div>
 
 <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
