Ticket sales ended update

--- a/about.html
+++ b/about.html
@@ -192,6 +192,7 @@
     <li>At-event support</li>
   </ul>
 </p>
+<p><a href="https://instagram.com/u.m.cos">Meela</a> is our official photographer for RVR 2021.</p>
 <p>Kjrsten Kay originally designed and drew logos and design elements.</p>
 <p><a href="http://moniquelopez.net">Monique</a> built our website.</p>
 
