--- a/event/event-faq.html
+++ b/event/event-faq.html
@@ -116,21 +116,19 @@
   <h3 class="section-header">The Venue</h3>
   <p>See also <a href="./venue.html">our venue page</a>.</p>
   <h4>How do I reseve my room onsite?</h4>
-  <p>Use our <a href="https://book.passkey.com/go/sroy1121mg">Passkey portal</a>: <a href="https://book.passkey.com/go/sroy1121mg">https://book.passkey.com/go/sroy1121mg</a> to reserve your room by October 19, 2021.</p>
+  <p>Room block reservations closed on October 19, 2021.</p>
   <h4>Where is the Royal Vegas Retreat room block?</h4>
   <p>We will be at the <a href="https://www.mgmgrand.com">MGM Grand Hotel and Casino, Las Vegas</a>.</p>
   <h4>How much does a room in the MGM Grand room block cost?</h4>
   <p>Room rates for this event start at $158/night.</p>
   <h4>Can I cancel my room reservation prior to the event?</h4>
   <p>You can cancel your reservation via the <a href="https://book.passkey.com/go/sroy1121mg">Passkey portal</a> up to 72 hours prior to the event with no charge.</p> 
-  <h4>Can I reserve a room for the night before and check out after the event is over?</h4>
-  <p>Yes! We have set aside rooms for Thursday, November 18 and Sunday, November 21 (to check out Monday, November 22). We highly encourage you to come in early to get your bearings and stay late for a relaxing trip home! We still hope to plan pre- and post-convention informal events for VIPs and GA ticketholders, but our content schedule is subject to change as a result of COVID-19.</p>
   <h3 class="section-header">Registration</h3>
   <p>See also <a href="./reg.html">our main registration page</a>.</p>
   <h4>Where do I buy my ticket?</h4>
-  <p>Buy your ticket now on our <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2020-tickets-52897344381">Eventbrite page</a>.</p>
-  <h4>How much do tickets cost?</h4>
-  <p>Prices are as follows:
+  <p>We use Eventbrite to sell tickets. Ticket sales for RVR 2021 are now closed.</p>
+  <h4>How much did tickets cost?</h4>
+  <p>Prices were as follows:
     <ul>
       <li><b>GA</b>: $125</li>
       <li><b>VIP</b>: $200</li>
