--- a/event/volunteers.html
+++ b/event/volunteers.html
@@ -97,20 +97,7 @@
   <h1 class="sec01">
   <h1>Volunteer at Royal Vegas Retreat</h1>
   <hr>
-  <p>We need your help to make this event as fabulous as possible!</p>
-  <p>Sign up to volunteer at Royal Vegas Retreat 2021 before October 19: <a href="https://forms.gle/eeqKQQVkdQtdBKLs7">https://forms.gle/eeqKQQVkdQtdBKLs7</a></p>
-  <p>We are accepting volunteers on a rolling basis. Volunteers can sign up to assist in one of many areas, including:
-    <ul>
-      <li>Registration</li>
-      <li>Fashion show coordination (separate from modeling - we will release model applications in late 2021)</li>
-      <li>Remote vending</li>
-      <li>VIP guest experience</li>
-      <li>Swap meet</li>
-      <li>...and more!</li>
-    </ul>
-  <p>We are thrilled to offer our volunteers free general admission tickets in exchange for their work. Volunteers will be responsible for their own travel and accommodations, and must complete at least 8 hours of work to qualify.</p>
-  <p>If we accept your application, we will reach out to you with more details about your commitment and which domain you will work in.</p>
-  <p>Thank you so much! We can't wait to work with you at Royal Vegas Retreat 2021.</p>
+  <p>Thank you all for your support and enthusiasm! Volunteer applications for RVR 2021 are now closed. All volunteers should have gotten an email with details on how to confirm their interest. If you think we missed your application, send us an email ASAP at <a href="mailto:info@prettyprincess.club">info@prettyprincess.club</a>.</p>
   <hr>
 
 </div>
