--- a/vegas.html
+++ b/vegas.html
@@ -97,7 +97,6 @@
     <h3>MGM Grand Las Vegas, NV</h3>
     <h3>November 19 - November 21, 2021</h3>
 <h1 class="sec01">
-  <p><a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2020-tickets-52897344381">Buy your ticket  on Eventbrite</a> and <a href="https://book.passkey.com/go/sroy1121mg">book your room on Passkey</a> before October 19!</p>
 <p>
    ♥ <a href="./event/coord-contests.html">Coord Contests</a> ♥ 
    <a href="./event/event-faq.html">Event FAQ</a> ♥ 
@@ -127,7 +126,7 @@
 <p>Alice falls down a rabbit hole - this time, into Las Vegas. Surrounded by unfamiliar sights and sounds, she sets out to explore, and finds mad hatters, white rabbits, games and cards, mysterious bottles, queens and kings, caterpillars chain-smoking over penny slots, strange grinning cats, and more...</p>
 <p><b>Please note that you do not have to dress in accordance to the theme at Royal Vegas Retreat 2021</b> - only adhere to our dress code, described in <a href="https://prettyprincess.club/event/event-faq.html">our event FAQ</a>.</p>
 <h2 class="section-header"></a>Where do I sign up?</h2>
-<p>Those who reserved a ticket can pay the remaining price starting August 14, 2021 on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2021-tickets-52897344381">our Eventbrite page</a>, and we will have a limited number of tickets available for sale at full price on August 14 at 12:00 PM PT. You can reserve your room onsite at the MGM Grand right now via <a href="https://book.passkey.com/go/sroy1121mg">our Passkey portal</a>. See our <a href="./event/reg.html">registration</a>, <a href="./event/venue.html">venue</a>, and <a href="./event/event-faq.html">event FAQ</a> pages for more information.</p>
+<p>Room block bookings and registration for RVR 2021 are now closed. Thank you for your support and enthusiasm!</p>
 <h2 class="section-header">How do I learn about updates?</h2>
 <p><a href="https://buttondown.email/prettyprincessclub">Subscribe to our blog+email list</a> to get the latest information about Royal Vegas Retreat 2021 before it hits social media!</p>
 <h2 class="section-header">How do I support Pretty Princess Club and Royal Vegas Retreat?</h2>
