--- a/event/reg.html
+++ b/event/reg.html
@@ -97,20 +97,7 @@
   <h1 class="sec01">
   <h1>RVR Registration</h1>
   <hr>
-  <p>Buy your ticket now on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2020-tickets-52897344381">Eventbrite</a> before October 19!</p>
-  <p>We sell tickets and ticket reservations on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2021-tickets-52897344381">our Eventbrite page</a>.</p>
-  <p>On <b>August 14th</b> we will ask everyone who reserved a ticket during the reservation period to pay the remainder of their ticket price. At this time, you will pay the remaining <b>$120</b> for <b>GA tickets</b> and <b>$180</b> for <b>VIP tickets</b>. The final payment on ticket reservations is due September 1st.</p> 
-  <p>In addition, we are able to offer a limited number of VIP and GA tickets at full price. We have a number of partner passes available. Sales will start on August 14th at 12:00 PM PT. Prices will be as follows:
-    <ul>
-      <li><b>GA</b>: $125</li>
-      <li><b>VIP</b>: $200</li>
-      <li><b>Partner Pass</b>: $20</li>
-    </ul>
-  </p>
-  <p>VIP ticketholders receive an exclusive premium goody bag with gifts from our sponsors, access to exclusive before- and after-parties, and priority seating for afternoon tea and main stage content.</p>
-  <p>The Partner Pass is a special ticket type for partners, parents, and friends of attendees who do not wear J-fashion but wish to travel together. Partner Pass ticketholders are not required to adhere to the dress code. However, they may only access the vendors' area, fashion show content, and community-provided content.</p>
-  <p>We are no longer offering Sunday-only tickets.</p> 
-  <p>We are proud to announce that we have an official room block with the MGM Grand with an excellent event rate. Please visit our <a href="./venue.html">Room Block and Venue</a> page for more information and to make your reservation with the MGM Grand now!</p>
+  <p>Thank you for your support and enthusiasm! Registration for RVR 2021 is now closed.</p>
   <p>Please see our <a href="./event-faq.html">Event FAQ</a> page for common questions about registration.</p>
   <hr>
 
