--- a/event/venue.html
+++ b/event/venue.html
@@ -98,7 +98,7 @@
   <h1>The MGM Grand Las Vegas</h1>
   <hr>
   <p>We can't wait to welcome you to the <a href="https://mgmgrand.mgmresorts.com/en.html">MGM Grand Las Vegas</a>, in the heart of the Vegas Strip.</p>
-  <p>Room reservations are OPEN NOW. Use our <a href="https://book.passkey.com/go/sroy1121mg">Passkey portal</a>: <a href="https://book.passkey.com/go/sroy1121mg">https://book.passkey.com/go/sroy1121mg</a> to reserve your room by October 19, 2021.</p>
+  <p>Room reservations are now closed, but you can look up your reservation using our <a href="https://book.passkey.com/go/sroy1121mg">Passkey portal</a>: <a href="https://book.passkey.com/go/sroy1121mg">https://book.passkey.com/go/sroy1121mg</a>.</p>
 
   <p>Visit the <a href="https://mgmgrand.mgmresorts.com/en.html">MGM Grand</a> site to learn more about the amenities available at the venue.</p>
 
