Update event-faq to have correct contact link

--- a/event/event-faq.html
+++ b/event/event-faq.html
@@ -142,10 +142,10 @@
   <h4>Will you sell tickets at the event?</h4>
   <p>We will not sell tickets at the event - you must buy your ticket online before October 19.</p>
   <h4>I tried to use a discount code to buy my ticket, but it didn't work! What do I do?</h4>
-  <p>Oh no! <a href="../contact.html">Contact us</a> right away, and provide a picture of your promo code. We will fix it ASAP!</p>
+  <p>Oh no! <a href="../about/contact.html">Contact us</a> right away, and provide a picture of your promo code. We will fix it ASAP!</p>
   <h4>I bought a ticket, but it turns out I can't go to Royal Vegas Retreat. Can I get a refund?</h4>
   <p>We will allow refunds, no questions asked, between October 16 and November 17 2021. This is to allow attendees to make a safe choice regarding their attendance this year.</p>
-  <h4>I have a discount code for a ticket, but I won't be able to go to Royal Vegas Retreat. Can I give the ticket to a friend?</h4>
+  <h4>I have a discount code for a ticket, but I won't be able to go to Royal Vegas RetreatR. Can I give the ticket to a friend?</h4>
   <p>Yes! As long as you haven't already used your code to buy a ticket, you can gift it to a friend.</p>
   <h4>Do I need a VIP ticket to attend the Sunday afternoon tea party?</h4>
   <p>No! The tea party is included with all GA and VIP tickets by default.</p>
@@ -154,7 +154,7 @@
   <p>Our dress code for Royal Vegas Retreat 2021 is as follows:</p>
   <p>Attendees must wear J-fashion to participate at the event.  This includes but is not limited to: Lolita/EGL, Ouji, Aristocrat/EGA, Mori-kei, Fairy-kei, Decora, Visual-kei, Otome, Gyaru, J-Punk, J-Goth.  Japanese as well as Western formalwear (e.g. a three-piece suit) are also allowed.</p>
   <p>Cosplay, steampunk, and European historical re-enactment costumes do not fit the theme of this event, and as such are not allowed. In addition, coordinates in violation of our <a href="../about/coc.html">Code of Conduct</a> are not allowed.</p>
-  <p>If you have any questions about the dress code, please feel free to <a href="../contact.html">contact us</a> with any questions.  Our staff at the event are happy to assist as well, and they will have the final say when considering whether a guest’s attire is appropriate for the event.</p>
+  <p>If you have any questions about the dress code, please feel free to <a href="../about/contact.html">contact us</a> with any questions.  Our staff at the event are happy to assist as well, and they will have the final say when considering whether a guest’s attire is appropriate for the event.</p>
   <h4>What if my non-Lolita partner or parent wants to come to Royal Vegas Retreat?</h4>
   <p>All J-fashion complies with our dress code, as well as general formalwear - you don't have to wear Lolita all weekend long, and neither does your companion.</p>
   <p>But if your travel buddy doesn't want to dress up, we have a special limited-access Partner Pass. The Partner Pass allows your partner to attend the fashion shows and shop in the vendors' room for a discounted price and no dress code requirement. The Partner Pass does not include access to panels, tea party, dance, games, coord contests, or any other part of the event outside of the fashion shows and vendors' room.</p>
@@ -166,12 +166,12 @@
   <h3 class="section-header"></a>Schedule and Programming</h3>
   <p>Coming soon!  For now, see our <a href="./programming.html">Programming</a> page for more details.</p>
   <h3 class="section-header">Volunteering and Sponsorship</h3>
-  <p>Are you interested in lending your skills to the success of Royal Vegas Retreat? <a href="./volunteers.html">Visit the Volunteers page</a> or <a href="../contact.html">contact us directly!</a></p>
-  <p>We are always looking for sponsors who can donate small gifts for contest prizes and other perks for our guests. <a href="../contact.html">Contact us</a> anytime if you're interested in sponsoring our event.</p>
+  <p>Are you interested in lending your skills to the success of Royal Vegas Retreat? <a href="./volunteers.html">Visit the Volunteers page</a> or <a href="../about/contact.html">contact us directly!</a></p>
+  <p>We are always looking for sponsors who can donate small gifts for contest prizes and other perks for our guests. <a href="../about/contact.html">Contact us</a> anytime if you're interested in sponsoring our event.</p>
   <h3 class="section-header">Code of Conduct</h3>
 <p>Please see our <a href="../about/coc.html">Code of Conduct page</a> for our complete code of conduct and policies.</p>
   <hr>
-  <p>Have a question? <a href="../contact.html">Contact us</a> anytime.</p>
+  <p>Have a question? <a href="../about/contact.html">Contact us</a> anytime.</p>
   <hr>
 
 </div>
