More reg closed changes

--- a/event/fashion-show.html
+++ b/event/fashion-show.html
@@ -96,11 +96,8 @@
   <h1>RVR 2021 Fashion Show</h1>
   <hr>
   <h1 class="sec01">
-      <center>
-  <p><a href="https://fluffyshow.com">Apply to model now on Fluffy Show!</a></p>
-</center>
 <h2 class="section-header">Our Fashion Shows</h2>
-<p>We are proud to host two fashion shows at Royal Vegas Retreat 2021: one for all things J-fashion, and one dedicated to Lolita fashion! <a href="https://fluffyshow.com">Model applications are open until October 19 on Fluffy Show.</a> Please keep in mind that all models must have a GA or VIP ticket to Royal Vegas Retreat. Read on to find our more about each show.</p>
+<p>We are proud to host two fashion shows at Royal Vegas Retreat 2021: one for all things J-fashion, and one dedicated to Lolita fashion! <a href="https://fluffyshow.com">We are using Fluffy Show for model coordination.</a> Please keep in mind that all models must have a GA or VIP ticket to Royal Vegas Retreat. Read on to find our more about each show.</p>
 <h3 class="section-header">All Things J-Fashion</h3>
 <h4>Friday, November 19</h4>
 <p>Our All Things J-Fashion show will feature the following brands:
@@ -112,7 +109,6 @@
     <li><a href="https://www.puvithel.com/">Puvithel</a></li>
     <li><a href="https://theblackribbon.com/">The Black Ribbon</a></li>
   </ul></p>
-<p>Models can apply to model in this show or both shows on <a href="https://fluffyshow.com">Fluffy Show</a> until October 19.</p>
 <h3 class="section-header">Lolita Fashion</h3>
 <h4>Saturday, November 20</h4>
 <p>Our Lolita Fashion show will feature the following brands:
@@ -125,17 +121,7 @@
     <li><a href="https://www.puvithel.com/">Puvithel</a></li>
     <li><a href="https://theblackribbon.com/">The Black Ribbon</a></li>
   </ul></p>
-<p>Models can apply to model in this show or both shows on <a href="https://fluffyshow.com">Fluffy Show</a> until October 19.</p>
-<h3 class="section-header">How Do I Apply?</h3>
-<p>If you're interested in modeling, you can apply NOW on <a href="https://fluffyshow.com">Fluffy Show</a>. Here's how it works:
-  <ol>
-    <li>Create an account on Fluffy Show</li>
-    <li>Create a model profile - this might take a little while because your profile will have a lot of information in it! Just remember that you can use this profile to apply to any other show that uses Fluffy Show, so you only have to enter all of this information one time.</li>
-    <li>Apply to the shows you're interested in! For Royal Vegas Retreat, you can apply to either or both of our shows.</li>
-    <li>After the October 19 deadline, our team will close applications and work with brands to select models. We need all the models we can get to put on an amazing show, so please apply!</li>
-  </ol>
-</p>
-<h3 class="section-header">What to Expect</h3>
+<h3 class="section-header">What to Expect for Models</h3>
 <p>Modeling is an amazing experience that puts you in contact with designers, brand owners, and other fashion fans. It requires a bit of a time commitment, but don't forget that our main stage panels will be <a href="https://www.twitch.tv/jfashionondemand">streamed live on Twitch</a> and the VODs for both the main stage panels and community panels will be posted to the <a href="https://www.youtube.com/channel/UCDhEhvYEapENUxRGBN7LJMQ">JFashion on Demand YouTube channel</a> after the event. Model call time is 3 hours before the show on both days. We may ask you to attend a brief rehearsal in the morning before our content starts. We have staff and volunteers on hand to organize and assist you, but please be prepared to do your own hair and makeup. We may ask you to model for more than one brand in a show. Designers and brands may also ask you to bring wardrobe staples like shoes, wigs, and petticoats to assist them in creating the perfect look.</p>
 <p>Seeing Lolita and J-fashion looks on a runway in person is such an important part of our event, and that's why we need your help - thank you in advance for signing up to model!</p>
   <p>If you have any questions, feel free to drop us a line: <a href="mailto:info@prettyprincess.club">info@prettyprincess.club</a></p>
