--- a/event/volunteers.html
+++ b/event/volunteers.html
@@ -97,7 +97,7 @@
   <h1 class="sec01">
   <h1>Volunteer at Royal Vegas Retreat</h1>
   <hr>
-  <p>Thank you all for your support and enthusiasm! Volunteer applications for RVR 2021 are now closed. All volunteers should have gotten an email with details on how to confirm their interest. If you think we missed your application, send us an email ASAP at <a href="mailto:info@prettyprincess.club">info@prettyprincess.club</a>.</p>
+  <p>Thank you all for your support and enthusiasm! Volunteer applications for RVR 2021 are now closed. All volunteers should have gotten an email with details on how to confirm their interest.</p>
   <hr>
 
 </div>
