--- a/vegas.html
+++ b/vegas.html
@@ -126,7 +126,7 @@
 <p>Alice falls down a rabbit hole - this time, into Las Vegas. Surrounded by unfamiliar sights and sounds, she sets out to explore, and finds mad hatters, white rabbits, games and cards, mysterious bottles, queens and kings, caterpillars chain-smoking over penny slots, strange grinning cats, and more...</p>
 <p><b>Please note that you do not have to dress in accordance to the theme at Royal Vegas Retreat 2021</b> - only adhere to our dress code, described in <a href="https://prettyprincess.club/event/event-faq.html">our event FAQ</a>.</p>
 <h2 class="section-header"></a>Where do I sign up?</h2>
-<p>Room block bookings and registration for RVR 2021 are now closed. Thank you for your support and enthusiasm!</p>
+<p>Room block bookings and registration for RVR 2021 are now closed. Thank you for your support and enthusiasm! You can watch most of our main stage content live on <a href="https://twitch.tv/jfashionondemand">the JFashion on Demand Twitch channel</a>, and community stage content will be uploaded to YouTube after the event.</p>
 <h2 class="section-header">How do I learn about updates?</h2>
 <p><a href="https://buttondown.email/prettyprincessclub">Subscribe to our blog+email list</a> to get the latest information about Royal Vegas Retreat 2021 before it hits social media!</p>
 <h2 class="section-header">How do I support Pretty Princess Club and Royal Vegas Retreat?</h2>
